--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -40,12 +40,12 @@ hr.separator {
 
 .projectContainer-left {
     width: 100%;
-    height: 360px;
+    height: fit-content;
     background-color:transparent;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content:left;
+    justify-content:center;
     align-items: center;
     position: relative;
     margin-left: 5%;
@@ -53,23 +53,22 @@ hr.separator {
 
 .projectContainer-right {
     width: 100%;
-    height: 360px;
+    height: fit-content;
     background-color:transparent;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content:right;
+    justify-content:center;
     align-items: center;
     margin-left: 5%;
 }
 
 .media {
     width: 60%;
-    float:unset;
-    height: 100%;
-    display: flex;
+    height: fit-content;
+    display: inline-flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
 }
@@ -82,6 +81,7 @@ hr.separator {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    min-width: 280px;
 }
 
 .description-container {
@@ -191,6 +191,39 @@ hr.separator {
   color: gray;
 }
 
-img.presentation {
+img.presentation#horizontal {
     filter:drop-shadow(20px 20px 10px rgba(0, 0, 0, 0.3));
+    display: block;  
+    height: auto;
+    width: auto;
+    min-width: 280px;
+    max-width: 512px;
+    max-height: 288px;
+    
 }
+
+img.presentation#vertical {
+    filter:drop-shadow(20px 20px 10px rgba(0, 0, 0, 0.3));
+    display: block;  
+}
+
+@media (max-width: 725px) {
+    .media {
+      width: 100%;
+      margin-top: 20px;
+      display: inline-flex;
+      justify-content:space-between;
+    }
+    .projectContainer-right{
+        margin: 0%;
+    }
+    .projectContainer-left{
+        margin: 0%;
+    }
+    img.presentation#horizontal {
+        margin: 5px;
+    }
+    body{
+        margin: 0px;
+    }
+  }
