--- a/docs/css/habilidades.css
+++ b/docs/css/habilidades.css
@@ -4,7 +4,9 @@
     height: 100px;
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.50);
-    margin: 10px
+    margin: 10px;
+    width: 90%;
+    max-width: 800px;
 }
 
 .lang_icon {
@@ -79,5 +81,8 @@
   @media screen and (max-width: 410px) {
     .label {
       font-size: small;
+    }
+    .hability_container {
+      width: auto;
     }
   }
