--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -225,7 +225,7 @@ img.presentation#vertical {
 }
 
 .background {
-    filter:drop-shadow(20px 20px 10px rgba(0, 0, 0, 0.3));
+    filter:drop-shadow(0px 20px 20px rgba(0, 0, 0, 0.3));
     background-color:#5e5e5e; 
     height:fit-content;
     flex-direction: column;
@@ -233,6 +233,12 @@ img.presentation#vertical {
     justify-items: center;
     align-items: center;
     justify-content: center;
+}
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: flex-end;
 }
 
 @media (max-width: 810px) {
